# 2dgameABANDONED

./: CMakeLists.txt  README.md  dip.gv  inheritance.gv  todo.md  todo.txt
images/: art_credits.txt
include/: AABB.h  AABB2i.h  BackgroundFill.h  BaseActor.h  BaseDamageable.h  BaseEnemy.h  BaseMeleeWeapon.h  BaseObject.h  BaseParticle.h  BaseProjectile.h  BaseScene.h  BaseTextObject.h  BaseUIObject.h  BaseUiObject.h  BitmapFont.h  Button.h  Crosshair.h  Damage.h  DamageCalculations.h  DynamicHealthbar.h  Enemy.h  EnemyManager.h  Engine.h  Fireball.h  FireballExplosion.h  FireballParticle.h  Game.h  GameScene.h  GameStateManager.h  HealthBar.h  Healthbar.h  InputManager.h  MenuScene.h  ParticleEmitter.h  ParticleEmitterManager.h  ParticleManager.h  ParticleSpawner.h  PauseScene.h  Player.h  PlayerDebugText.h  (+34 more)
resources/: art_credits.txt
src/: BaseActor.cpp  BaseDamageable.cpp  BaseEnemy.cpp  BaseMeleeWeapon.cpp  BaseParticle.cpp  BaseProjectile.cpp  BaseScene.cpp  BaseTextObject.h  BaseUiObject.h  DynamicHealthbar.cc  DynamicHealthbar.cpp  DynamicHealthbar.h  Enemy.cpp  EnemyManager.cpp  Engine.cpp  Fireball.cpp  FireballExplosion.cpp  Game.cpp  GameScene.cpp  Healthbar.cpp  Healthbar.h  InputManager.cpp  MenuScene.cpp  ParticleManager.cpp  PauseScene.cpp  Player.cpp  Projectile.cpp  ProjectileManager.cpp  ResourceManager.cpp  SceneManager.cpp  Skeleton.cpp  Sword.cpp  SwordSlash.cpp  UiManager.cpp  base_actor.cc  base_character.cc  base_enemy.cc  base_object.cc  base_object.h  base_projectile.cc  (+37 more)
unused/: BaseEnemy.cpp  BaseEnemy.h
